# League-Simulator-Update

./: .Renviron.example  .Rhistory  .dockerignore  .env.example  .gitignore  .lintr  .markdownlint.json  CLAUDE.md  DEPENDENCY_ANALYSIS.md  DESCRIPTION  DOCKERFILE  Dockerfile  Dockerfile.integrated  Dockerfile.league  Dockerfile.optimized  Dockerfile.shiny  Dockerfile.simple  Dockerfile.test  EOD_SUMMARY.md  FUNCTION_ANALYSIS.md  NAMESPACE  PRD_ISSUE_1_monolithic_deployment.md  README.md  RUST_INTEGRATION.md  TEST_RESULTS_SUMMARY.md  TeamList_2024.xlsx  api_documentation.md  compare_rust_vs_r.R  crontab  debug_base_empty.R  debug_combined.R  debug_empty.R  debug_gd_consistency.R  debug_goals_only.R  debug_test.R  diagnose_fixtures.R  docker-compose.integrated.yml  docker-compose.simple.yml  docker-compose.yml  docker-integrated-start.sh  (+25 more)
.claude/: CLAUDE.md  development_workflow.md  project_context.md  testing_and_build.md  workflow.md
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
RCode/: LeagueSimulator.R  RcppExports.R  SaisonSimulieren.R  SaisonSimulierenCPP.R  Spiel.R  SpielCPP.R  SpielNichtSimulieren.cpp  Tabelle.R  Tabelle_presentation.R  TeamList_2023.csv  TeamList_2024.csv  TeamList_2024_backup_20250719_092541.csv  TeamList_2025.csv  api_helpers.R  api_service.R  checkAPILimits.R  configmap_deployment.R  cpp_wrappers.R  csv_generation.R  deployment_files_league.txt  deployment_files_shiny.txt  elo_aggregation.R  error_handling.R  file_operations.R  input_handler.R  input_validation.R  interactive_prompts.R  leagueSimulatorCPP.R  leagueSimulatorCPP_Liga3.R  league_processor.R  league_scheduler.R  logging.R  prozent.R  retrieveCredits.R  retrieveResults.R  retrieveResults_broken.R  retry_handler.R  rust_integration.R  season_processor.R  season_validation.R  (+21 more)
ShinyApp/: app.R  app_helpers.R  health_endpoints.R
docker/: healthcheck-league.R  healthcheck-shiny.R
docs/: API_KEY_SETUP.md  COMMANDS.md  DEPLOYMENT_SAFETY.md  DOCUMENTATION_DOCKER.md  DOCUMENTATION_GHCR.md  DOCUMENTATION_GITHUB_ACTIONS.md  DOCUMENTATION_KUBERNETES.md  DOCUMENTATION_RAPIDAPI_FOOTBALL.md  DOCUMENTATION_RENV.md  DOCUMENTATION_ROCKER.md  GITHUB_ACTIONS_CONFIG.md  KNOWN_ISSUES.md  README.md  REMOVE_SHELL_ALIASES.md  RUST_API_REFERENCE.md  SEASON_TRANSITION_FIX.md  SEASON_TRANSITION_UPDATES.md  TEST_FIX_PLAN.md  TEST_ORGANIZATION.md  TEST_SIMPLIFICATION_PLAN.md  TEST_SUITE_FINAL.md  TEST_SUMMARY.md  VERSION_MANAGEMENT.md  ci-performance-report.md  implementation-plan-pod-lifecycle.md  issue-40-test-specs.md
examples/: team_config.json
k8s/: deployment.yaml  k8s-deployment.yaml
league-simulator-rust/: Cargo.toml  Dockerfile  Dockerfile.build  README.md
league-simulator-rust/benches/: simulation_bench.rs
league-simulator-rust/src/: lib.rs  main.rs
league-simulator-rust/src/api/: handlers.rs  mod.rs  tests.rs
league-simulator-rust/src/elo/: mod.rs  tests.rs
league-simulator-rust/src/models/: mod.rs
league-simulator-rust/src/monte_carlo/: mod.rs  tests.rs
league-simulator-rust/src/simulation/: match_sim.rs  match_sim_fixed.rs  mod.rs  season.rs  tests.rs
league-simulator-rust/test_data/: distribution_params.json  elo_test_cases.json  match_simulation_cases.json  season_test_data.json
league-simulator-rust/tests/: elo_compatibility.rs
monitoring/: deployment_safety_rules.yml  grafana-dashboard.json  prometheus-config.yml
scripts/: activate_lifecycle.sh  deploy-local.sh  status.sh  (+7 more)
(+247 files in other folders)
