[package]
name = "league-simulator-rust"
version = "0.1.0"
edition = "2021"
authors = ["League Simulator Team"]
description = "High-performance football league Monte Carlo simulator"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.10"
rand_distr = "0.6"
rayon = "1.8"

# Web framework for REST API
axum = "0.8"
tokio = { version = "1.35", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Numerical computation
statrs = "0.18"  # Statistical distributions
approx = "0.5"   # Floating point comparisons

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
# Testing utilities
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.4"
assert_approx_eq = "1.1"
tempfile = "3.8"
# HTTP-handler tests use `tower::ServiceExt::oneshot` (util feature)
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# Benchmarks disabled for initial build
# [[bench]]
# name = "simulation_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Deferred clippy lints — to be addressed in a follow-up PR.
# See GitHub issue #76 (CI rebuild) for context. Each lint represents real
# code-quality work that's out of scope for the CI rebuild itself.
[lints.clippy]
excessive_precision = "allow"             # 5 occurrences in src/lib.rs and tests (constants with too many decimals)
manual_clamp = "allow"                    # use of min(max(x, lo), hi) pattern instead of .clamp(lo, hi)
too_many_arguments = "allow"              # 2 functions exceed default 7-arg threshold (8 and 10 args)
manual_range_contains = "allow"           # x >= lo && x <= hi pattern instead of (lo..=hi).contains(&x)
single_component_path_imports = "allow"   # bare `use serde_json;` in integration tests
unnecessary_unwrap = "allow"              # .unwrap() after is_none() check (Option::expect would be clearer)